AWS deployment configs

--- a/PortfolioWebApp.Presentation/PortfolioWebApp.Presentation.csproj
+++ b/PortfolioWebApp.Presentation/PortfolioWebApp.Presentation.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -11,6 +11,29 @@
     <ProjectReference Include="..\PortfolioWebApp.Application\PortfolioWebApp.Application\PortfolioWebApp.Application.csproj" />
     <ProjectReference Include="..\PortfolioWebApp.Domain\PortfolioWebApp.Domain\PortfolioWebApp.Domain.csproj" />
     <ProjectReference Include="..\PortfolioWebApp.Infrastructure\PortfolioWebApp.Infrastructure\PortfolioWebApp.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include=".ebextensions\00_install_certbot.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include=".ebextensions\01_open_https_port.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include=".ebextensions\02_grant_executable_rights.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include=".ebextensions\03_renew_ssl_certificate_cron_job.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include=".platform\hooks\postdeploy\00_get_certificate.sh">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AWS.Logger.AspNetCore" Version="4.0.0" />
+    <PackageReference Include="AWS.Logger.Core" Version="4.0.0" />
   </ItemGroup>
 
 </Project>
