--- a/PortfolioWebApp.Presentation/appsettings.json
+++ b/PortfolioWebApp.Presentation/appsettings.json
@@ -1,4 +1,13 @@
 {
+  "AWS.Logging": {
+    "Region": "us-east-1",
+    "LogGroup": "Portfolio",
+    "LogLevel": {
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
