--- a/.github/workflows/eb.yml
+++ b/.github/workflows/eb.yml
@@ -14,7 +14,7 @@ env:
 
 jobs:
   build:
-    if: github.event_name == "push" || github.event.pull_request.merged == true
+    if: github.event_name == 'push' || github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
     steps:
