--- a/PortfolioWebApp.Presentation/PortfolioWebApp.Presentation.csproj
+++ b/PortfolioWebApp.Presentation/PortfolioWebApp.Presentation.csproj
@@ -37,6 +37,13 @@
   <ItemGroup>
     <PackageReference Include="AWS.Logger.AspNetCore" Version="4.0.0" />
     <PackageReference Include="AWS.Logger.Core" Version="4.0.0" />
+    <PackageReference Include="DartSassBuilder" Version="1.1.0" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.12.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\lib\font-awesome\dist\" />
   </ItemGroup>
 
 </Project>
